# rk3566_example

./: .gitignore
rknn_custom_cpu_op_demo/: CMakeLists.txt
rknn_custom_cpu_op_demo/model/: az_handwriting3566.rknn  az_handwriting3588.rknn
rknn_custom_cpu_op_demo/src/: main.cpp  rknn_api_test_custom_cpu_op.cpp
rknn_custom_gpu_op_demo/model/convert/: test.py
